kproblog/evaluation/parser/GKPrologParser.py
# Generated from /Users/francesco/Documents/problog/kprolog/GKProlog.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class GKPrologParser ( Parser ):

    grammarFileName = "GKProlog.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'('", u"')'", u"','", u"'@'", u"'['", 
                     u"']'", u"':-'", u"'.'", u"'::'", u"'declare'", u"'query'", 
                     u"<INVALID>", u"<INVALID>", u"'+'", u"'-'", u"'*'", 
                     u"'/'", u"'^'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"Comment", u"UPDATE_TYPE", u"PLUS", u"MINUS", u"TIMES", 
                      u"DIV", u"POW", u"CONST_ID", u"VAR_ID", u"INT_ID", 
                      u"FLOAT_ID", u"WS" ]

    RULE_constant = 0
    RULE_term = 1
    RULE_term_list = 2
    RULE_algebraic_weight = 3
    RULE_multiplyingExpression = 4
    RULE_powExpression = 5
    RULE_atom = 6
    RULE_atom_list = 7
    RULE_body_atom = 8
    RULE_body_atom_list = 9
    RULE_semiring_type = 10
    RULE_clause = 11
    RULE_predicate_name = 12
    RULE_program0 = 13
    RULE_program = 14

    ruleNames =  [ u"constant", u"term", u"term_list", u"algebraic_weight", 
                   u"multiplyingExpression", u"powExpression", u"atom", 
                   u"atom_list", u"body_atom", u"body_atom_list", u"semiring_type", 
                   u"clause", u"predicate_name", u"program0", u"program" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    Comment=12
    UPDATE_TYPE=13
    PLUS=14
    MINUS=15
    TIMES=16
    DIV=17
    POW=18
    CONST_ID=19
    VAR_ID=20
    INT_ID=21
    FLOAT_ID=22
    WS=23

    def __init__(self, input):
        super(GKPrologParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ConstantContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.ConstantContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_constant

     
        def copyFrom(self, ctx):
            super(GKPrologParser.ConstantContext, self).copyFrom(ctx)



    class FloatContext(ConstantContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ConstantContext)
            super(GKPrologParser.FloatContext, self).__init__(parser)
            self.copyFrom(ctx)

        def FLOAT_ID(self):
            return self.getToken(GKPrologParser.FLOAT_ID, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitFloat"):
                return visitor.visitFloat(self)
            else:
                return visitor.visitChildren(self)


    class ConstContext(ConstantContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ConstantContext)
            super(GKPrologParser.ConstContext, self).__init__(parser)
            self.copyFrom(ctx)

        def CONST_ID(self):
            return self.getToken(GKPrologParser.CONST_ID, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitConst"):
                return visitor.visitConst(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ConstantContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ConstantContext)
            super(GKPrologParser.IntContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT_ID(self):
            return self.getToken(GKPrologParser.INT_ID, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitInt"):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)



    def constant(self):

        localctx = GKPrologParser.ConstantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_constant)
        try:
            self.state = 33
            token = self._input.LA(1)
            if token in [GKPrologParser.CONST_ID]:
                localctx = GKPrologParser.ConstContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.match(GKPrologParser.CONST_ID)

            elif token in [GKPrologParser.INT_ID]:
                localctx = GKPrologParser.IntContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.match(GKPrologParser.INT_ID)

            elif token in [GKPrologParser.FLOAT_ID]:
                localctx = GKPrologParser.FloatContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.match(GKPrologParser.FLOAT_ID)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.TermContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_term

     
        def copyFrom(self, ctx):
            super(GKPrologParser.TermContext, self).copyFrom(ctx)



    class FuncTermContext(TermContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.TermContext)
            super(GKPrologParser.FuncTermContext, self).__init__(parser)
            self.copyFrom(ctx)

        def CONST_ID(self):
            return self.getToken(GKPrologParser.CONST_ID, 0)
        def term_list(self):
            return self.getTypedRuleContext(GKPrologParser.Term_listContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitFuncTerm"):
                return visitor.visitFuncTerm(self)
            else:
                return visitor.visitChildren(self)


    class ConstTermContext(TermContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.TermContext)
            super(GKPrologParser.ConstTermContext, self).__init__(parser)
            self.copyFrom(ctx)

        def constant(self):
            return self.getTypedRuleContext(GKPrologParser.ConstantContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitConstTerm"):
                return visitor.visitConstTerm(self)
            else:
                return visitor.visitChildren(self)



    def term(self):

        localctx = GKPrologParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_term)
        try:
            self.state = 41
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = GKPrologParser.ConstTermContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.constant()
                pass

            elif la_ == 2:
                localctx = GKPrologParser.FuncTermContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.match(GKPrologParser.CONST_ID)
                self.state = 37
                self.match(GKPrologParser.T__0)
                self.state = 38
                self.term_list()
                self.state = 39
                self.match(GKPrologParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Term_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.Term_listContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_term_list

     
        def copyFrom(self, ctx):
            super(GKPrologParser.Term_listContext, self).copyFrom(ctx)



    class TermInListContext(Term_listContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.Term_listContext)
            super(GKPrologParser.TermInListContext, self).__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(GKPrologParser.TermContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitTermInList"):
                return visitor.visitTermInList(self)
            else:
                return visitor.visitChildren(self)


    class TermListContext(Term_listContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.Term_listContext)
            super(GKPrologParser.TermListContext, self).__init__(parser)
            self.copyFrom(ctx)

        def term(self):
            return self.getTypedRuleContext(GKPrologParser.TermContext,0)

        def term_list(self):
            return self.getTypedRuleContext(GKPrologParser.Term_listContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitTermList"):
                return visitor.visitTermList(self)
            else:
                return visitor.visitChildren(self)



    def term_list(self):

        localctx = GKPrologParser.Term_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_term_list)
        try:
            self.state = 48
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = GKPrologParser.TermInListContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.term()
                pass

            elif la_ == 2:
                localctx = GKPrologParser.TermListContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.term()
                self.state = 45
                self.match(GKPrologParser.T__2)
                self.state = 46
                self.term_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Algebraic_weightContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.Algebraic_weightContext, self).__init__(parent, invokingState)
            self.parser = parser

        def multiplyingExpression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GKPrologParser.MultiplyingExpressionContext)
            else:
                return self.getTypedRuleContext(GKPrologParser.MultiplyingExpressionContext,i)


        def PLUS(self, i=None):
            if i is None:
                return self.getTokens(GKPrologParser.PLUS)
            else:
                return self.getToken(GKPrologParser.PLUS, i)

        def getRuleIndex(self):
            return GKPrologParser.RULE_algebraic_weight

        def accept(self, visitor):
            if hasattr(visitor, "visitAlgebraic_weight"):
                return visitor.visitAlgebraic_weight(self)
            else:
                return visitor.visitChildren(self)




    def algebraic_weight(self):

        localctx = GKPrologParser.Algebraic_weightContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_algebraic_weight)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.multiplyingExpression()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GKPrologParser.PLUS:
                self.state = 51
                self.match(GKPrologParser.PLUS)
                self.state = 52
                self.multiplyingExpression()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiplyingExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.MultiplyingExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def powExpression(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GKPrologParser.PowExpressionContext)
            else:
                return self.getTypedRuleContext(GKPrologParser.PowExpressionContext,i)


        def TIMES(self, i=None):
            if i is None:
                return self.getTokens(GKPrologParser.TIMES)
            else:
                return self.getToken(GKPrologParser.TIMES, i)

        def getRuleIndex(self):
            return GKPrologParser.RULE_multiplyingExpression

        def accept(self, visitor):
            if hasattr(visitor, "visitMultiplyingExpression"):
                return visitor.visitMultiplyingExpression(self)
            else:
                return visitor.visitChildren(self)




    def multiplyingExpression(self):

        localctx = GKPrologParser.MultiplyingExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_multiplyingExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.powExpression()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==GKPrologParser.TIMES:
                self.state = 59
                self.match(GKPrologParser.TIMES)
                self.state = 60
                self.powExpression()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PowExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.PowExpressionContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_powExpression

     
        def copyFrom(self, ctx):
            super(GKPrologParser.PowExpressionContext, self).copyFrom(ctx)



    class PowExpression_metafunctionContext(PowExpressionContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.PowExpressionContext)
            super(GKPrologParser.PowExpression_metafunctionContext, self).__init__(parser)
            self.copyFrom(ctx)

        def constant(self):
            return self.getTypedRuleContext(GKPrologParser.ConstantContext,0)

        def algebraic_weight(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GKPrologParser.Algebraic_weightContext)
            else:
                return self.getTypedRuleContext(GKPrologParser.Algebraic_weightContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitPowExpression_metafunction"):
                return visitor.visitPowExpression_metafunction(self)
            else:
                return visitor.visitChildren(self)


    class PowExpression_termContext(PowExpressionContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.PowExpressionContext)
            super(GKPrologParser.PowExpression_termContext, self).__init__(parser)
            self.copyFrom(ctx)

        def term(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(GKPrologParser.TermContext)
            else:
                return self.getTypedRuleContext(GKPrologParser.TermContext,i)

        def POW(self):
            return self.getToken(GKPrologParser.POW, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitPowExpression_term"):
                return visitor.visitPowExpression_term(self)
            else:
                return visitor.visitChildren(self)



    def powExpression(self):

        localctx = GKPrologParser.PowExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_powExpression)
        self._la = 0 # Token type
        try:
            self.state = 84
            token = self._input.LA(1)
            if token in [GKPrologParser.CONST_ID, GKPrologParser.INT_ID, GKPrologParser.FLOAT_ID]:
                localctx = GKPrologParser.PowExpression_termContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.term()
                self.state = 69
                _la = self._input.LA(1)
                if _la==GKPrologParser.POW:
                    self.state = 67
                    self.match(GKPrologParser.POW)
                    self.state = 68
                    self.term()



            elif token in [GKPrologParser.T__3]:
                localctx = GKPrologParser.PowExpression_metafunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(GKPrologParser.T__3)
                self.state = 72
                self.constant()
                self.state = 73
                self.match(GKPrologParser.T__4)
                self.state = 74
                self.algebraic_weight()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==GKPrologParser.T__2:
                    self.state = 75
                    self.match(GKPrologParser.T__2)
                    self.state = 76
                    self.algebraic_weight()
                    self.state = 81
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 82
                self.match(GKPrologParser.T__5)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.AtomContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_atom

     
        def copyFrom(self, ctx):
            super(GKPrologParser.AtomContext, self).copyFrom(ctx)



    class AtomNonZeroContext(AtomContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.AtomContext)
            super(GKPrologParser.AtomNonZeroContext, self).__init__(parser)
            self.copyFrom(ctx)

        def constant(self):
            return self.getTypedRuleContext(GKPrologParser.ConstantContext,0)

        def term_list(self):
            return self.getTypedRuleContext(GKPrologParser.Term_listContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAtomNonZero"):
                return visitor.visitAtomNonZero(self)
            else:
                return visitor.visitChildren(self)


    class AtomZeroContext(AtomContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.AtomContext)
            super(GKPrologParser.AtomZeroContext, self).__init__(parser)
            self.copyFrom(ctx)

        def constant(self):
            return self.getTypedRuleContext(GKPrologParser.ConstantContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAtomZero"):
                return visitor.visitAtomZero(self)
            else:
                return visitor.visitChildren(self)



    def atom(self):

        localctx = GKPrologParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_atom)
        try:
            self.state = 92
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = GKPrologParser.AtomZeroContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.constant()
                pass

            elif la_ == 2:
                localctx = GKPrologParser.AtomNonZeroContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.constant()
                self.state = 88
                self.match(GKPrologParser.T__0)
                self.state = 89
                self.term_list()
                self.state = 90
                self.match(GKPrologParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Atom_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.Atom_listContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_atom_list

     
        def copyFrom(self, ctx):
            super(GKPrologParser.Atom_listContext, self).copyFrom(ctx)



    class AtomInListContext(Atom_listContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.Atom_listContext)
            super(GKPrologParser.AtomInListContext, self).__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(GKPrologParser.AtomContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAtomInList"):
                return visitor.visitAtomInList(self)
            else:
                return visitor.visitChildren(self)


    class AtomListContext(Atom_listContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.Atom_listContext)
            super(GKPrologParser.AtomListContext, self).__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(GKPrologParser.AtomContext,0)

        def atom_list(self):
            return self.getTypedRuleContext(GKPrologParser.Atom_listContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAtomList"):
                return visitor.visitAtomList(self)
            else:
                return visitor.visitChildren(self)



    def atom_list(self):

        localctx = GKPrologParser.Atom_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom_list)
        try:
            self.state = 99
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = GKPrologParser.AtomInListContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.atom()
                pass

            elif la_ == 2:
                localctx = GKPrologParser.AtomListContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.atom()
                self.state = 96
                self.match(GKPrologParser.T__2)
                self.state = 97
                self.atom_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Body_atomContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.Body_atomContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_body_atom

     
        def copyFrom(self, ctx):
            super(GKPrologParser.Body_atomContext, self).copyFrom(ctx)



    class SimpleBodyAtomContext(Body_atomContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.Body_atomContext)
            super(GKPrologParser.SimpleBodyAtomContext, self).__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(GKPrologParser.AtomContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitSimpleBodyAtom"):
                return visitor.visitSimpleBodyAtom(self)
            else:
                return visitor.visitChildren(self)


    class DecoratedBodyAtomContext(Body_atomContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.Body_atomContext)
            super(GKPrologParser.DecoratedBodyAtomContext, self).__init__(parser)
            self.copyFrom(ctx)

        def constant(self):
            return self.getTypedRuleContext(GKPrologParser.ConstantContext,0)

        def body_atom_list(self):
            return self.getTypedRuleContext(GKPrologParser.Body_atom_listContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitDecoratedBodyAtom"):
                return visitor.visitDecoratedBodyAtom(self)
            else:
                return visitor.visitChildren(self)



    def body_atom(self):

        localctx = GKPrologParser.Body_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_body_atom)
        try:
            self.state = 108
            token = self._input.LA(1)
            if token in [GKPrologParser.CONST_ID, GKPrologParser.INT_ID, GKPrologParser.FLOAT_ID]:
                localctx = GKPrologParser.SimpleBodyAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.atom()

            elif token in [GKPrologParser.T__3]:
                localctx = GKPrologParser.DecoratedBodyAtomContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(GKPrologParser.T__3)
                self.state = 103
                self.constant()
                self.state = 104
                self.match(GKPrologParser.T__4)
                self.state = 105
                self.body_atom_list()
                self.state = 106
                self.match(GKPrologParser.T__5)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Body_atom_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.Body_atom_listContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_body_atom_list

     
        def copyFrom(self, ctx):
            super(GKPrologParser.Body_atom_listContext, self).copyFrom(ctx)



    class BodyAtomInListContext(Body_atom_listContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.Body_atom_listContext)
            super(GKPrologParser.BodyAtomInListContext, self).__init__(parser)
            self.copyFrom(ctx)

        def body_atom(self):
            return self.getTypedRuleContext(GKPrologParser.Body_atomContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitBodyAtomInList"):
                return visitor.visitBodyAtomInList(self)
            else:
                return visitor.visitChildren(self)


    class BodyAtomListContext(Body_atom_listContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.Body_atom_listContext)
            super(GKPrologParser.BodyAtomListContext, self).__init__(parser)
            self.copyFrom(ctx)

        def body_atom(self):
            return self.getTypedRuleContext(GKPrologParser.Body_atomContext,0)

        def body_atom_list(self):
            return self.getTypedRuleContext(GKPrologParser.Body_atom_listContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitBodyAtomList"):
                return visitor.visitBodyAtomList(self)
            else:
                return visitor.visitChildren(self)



    def body_atom_list(self):

        localctx = GKPrologParser.Body_atom_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_body_atom_list)
        try:
            self.state = 115
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = GKPrologParser.BodyAtomInListContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.body_atom()
                pass

            elif la_ == 2:
                localctx = GKPrologParser.BodyAtomListContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.body_atom()
                self.state = 112
                self.match(GKPrologParser.T__2)
                self.state = 113
                self.body_atom_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Semiring_typeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.Semiring_typeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(GKPrologParser.TermContext,0)


        def getRuleIndex(self):
            return GKPrologParser.RULE_semiring_type

        def accept(self, visitor):
            if hasattr(visitor, "visitSemiring_type"):
                return visitor.visitSemiring_type(self)
            else:
                return visitor.visitChildren(self)




    def semiring_type(self):

        localctx = GKPrologParser.Semiring_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_semiring_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.term()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClauseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(GKPrologParser.ClauseContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GKPrologParser.RULE_clause

     
        def copyFrom(self, ctx):
            super(GKPrologParser.ClauseContext, self).copyFrom(ctx)



    class WeightedRuleContext(ClauseContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ClauseContext)
            super(GKPrologParser.WeightedRuleContext, self).__init__(parser)
            self.copyFrom(ctx)

        def algebraic_weight(self):
            return self.getTypedRuleContext(GKPrologParser.Algebraic_weightContext,0)

        def atom(self):
            return self.getTypedRuleContext(GKPrologParser.AtomContext,0)

        def body_atom_list(self):
            return self.getTypedRuleContext(GKPrologParser.Body_atom_listContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitWeightedRule"):
                return visitor.visitWeightedRule(self)
            else:
                return visitor.visitChildren(self)


    class WeightedFactContext(ClauseContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ClauseContext)
            super(GKPrologParser.WeightedFactContext, self).__init__(parser)
            self.copyFrom(ctx)

        def algebraic_weight(self):
            return self.getTypedRuleContext(GKPrologParser.Algebraic_weightContext,0)

        def atom(self):
            return self.getTypedRuleContext(GKPrologParser.AtomContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitWeightedFact"):
                return visitor.visitWeightedFact(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationCycleContext(ClauseContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ClauseContext)
            super(GKPrologParser.DeclarationCycleContext, self).__init__(parser)
            self.copyFrom(ctx)

        def predicate_name(self):
            return self.getTypedRuleContext(GKPrologParser.Predicate_nameContext,0)

        def INT_ID(self):
            return self.getToken(GKPrologParser.INT_ID, 0)
        def semiring_type(self):
            return self.getTypedRuleContext(GKPrologParser.Semiring_typeContext,0)

        def UPDATE_TYPE(self):
            return self.getToken(GKPrologParser.UPDATE_TYPE, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitDeclarationCycle"):
                return visitor.visitDeclarationCycle(self)
            else:
                return visitor.visitChildren(self)


    class RuleContext(ClauseContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ClauseContext)
            super(GKPrologParser.RuleContext, self).__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(GKPrologParser.AtomContext,0)

        def body_atom_list(self):
            return self.getTypedRuleContext(GKPrologParser.Body_atom_listContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitRule"):
                return visitor.visitRule(self)
            else:
                return visitor.visitChildren(self)


    class DeclarationContext(ClauseContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ClauseContext)
            super(GKPrologParser.DeclarationContext, self).__init__(parser)
            self.copyFrom(ctx)

        def predicate_name(self):
            return self.getTypedRuleContext(GKPrologParser.Predicate_nameContext,0)

        def INT_ID(self):
            return self.getToken(GKPrologParser.INT_ID, 0)
        def semiring_type(self):
            return self.getTypedRuleContext(GKPrologParser.Semiring_typeContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitDeclaration"):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)


    class FactContext(ClauseContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ClauseContext)
            super(GKPrologParser.FactContext, self).__init__(parser)
            self.copyFrom(ctx)

        def atom(self):
            return self.getTypedRuleContext(GKPrologParser.AtomContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitFact"):
                return visitor.visitFact(self)
            else:
                return visitor.visitChildren(self)


    class QueryAtomsContext(ClauseContext):

        def __init__(self, parser, ctx): # actually a GKPrologParser.ClauseContext)
            super(GKPrologParser.QueryAtomsContext, self).__init__(parser)
            self.copyFrom(ctx)

        def atom_list(self):
            return self.getTypedRuleContext(GKPrologParser.Atom_listContext,0)

